--- a/discord-repo/debian/changelog
+++ b/discord-repo/debian/changelog
@@ -1,3 +1,9 @@
+discord-repo (1.2) UNRELEASED; urgency=medium
+
+  * Move to debian.sources format as per https://wiki.debian.org/SourcesList#debian.sources_format
+
+ -- Tom Parker-Shemilt <palfrey@tevp.net>  Wed, 26 Nov 2025 23:49:07 +0000
+
 discord-repo (1.1) UNRELEASED; urgency=medium
 
   * New GPG key (which doesn't expire)
